// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`saml-login Renders \`saml-login\` with redirect query and title 1`] = `
<div
  class="v-card v-sheet theme--light"
>
  <div
    class="v-card__text"
  >
    <div
      class="ml-2 mb-2 body-2"
    >
      Login with SAML
    </div>
    <a
      class="v-btn theme--light primary"
      href="https://canopsis/backend/api/v4/saml/auth?relayState=http%3A%2F%2Flocalhost%2Fredirect"
    >
      <div
        class="v-btn__content"
      >
        Saml config title
      </div>
    </a>
  </div>
</div>
`;

exports[`saml-login Renders \`saml-login\` without redirect 1`] = `
<div
  class="v-card v-sheet theme--light"
>
  <div
    class="v-card__text"
  >
    <div
      class="ml-2 mb-2 body-2"
    >
      Login with SAML
    </div>
    <a
      class="v-btn theme--light primary"
      href="https://canopsis/backend/api/v4/saml/auth?relayState=http%3A%2F%2Flocalhost"
    >
      <div
        class="v-btn__content"
      >
        Login with SAML
      </div>
    </a>
  </div>
</div>
`;
